--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "start": "strapi start",
     "strapi": "strapi",
     "upgrade": "npx @strapi/upgrade latest",
-    "upgrade:dry": "npx @strapi/upgrade latest --dry"
+    "upgrade:dry": "npx @strapi/upgrade latest --dry",
+    "export_unencrypted": "npx strapi export --no-encrypt"
   },
   "dependencies": {
     "@strapi/plugin-cloud": "5.13.0",
     "@strapi/plugin-users-permissions": "5.13.0",
     "@strapi/strapi": "5.13.0",
+    "axios": "^1.9.0",
     "better-sqlite3": "11.3.0",
+    "mysql2": "^3.14.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.0.0",
