--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@strapi/plugin-cloud": "5.13.0",
     "@strapi/plugin-users-permissions": "5.13.0",
+    "@strapi/provider-email-nodemailer": "^5.16.0",
     "@strapi/strapi": "5.13.0",
     "axios": "^1.9.0",
     "mysql2": "^3.14.1",
